[workspace]
members = [
  "async",
  "context",
  "ful",
  "stack",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"

[package]
edition.workspace = true
name = "unico"
version.workspace = true

[features]
asym = ["unico-async/asym"]
boost = ["unico-context/boost"]
default = ["std", "asym", "sym", "boost"]
std = ["unico-ful/std", "unico-async/std"]
sym = ["unico-async/sym"]
ucx = ["unico-context/ucx"]
unwind = ["unico-ful/unwind", "unico-async/unwind"]

[dependencies]
unico-async = {path = "async", default-features = false}
unico-context = {path = "context", default-features = false}
unico-ful = {path = "ful", default-features = false}
unico-stack = {path = "stack", default-features = false}

[dev-dependencies]
criterion = {version = "0.5", features = ["async_tokio"]}
ferroc = {git = "https://github.com/js2xxx/ferroc.git"}
futures-lite = "2.4"
spin_on = "0.1"
time = "0.3"
tokio = {version = "1.41", features = ["full"]}

[[bench]]
harness = false
name = "basic"

