[package]
edition = "2021"
name = "unico-async"
version = "0.1.0"

[features]
default = ["std"]
std = ["unico-ful/std"]
unwind = ["unico-ful/unwind"]

[dependencies]
# Local crates
unico-context = {path = "../context", default-features = false, features = ["boost"]}
unico-ful = {path = "../ful", default-features = false}
unico-stack = {path = "../stack", default-features = false}
# External crates
pin-project = "1.1"
