[package]
edition.workspace = true
name = "unico-async"
version.workspace = true

[features]
asym = []
default = ["std", "asym", "sym"]
std = ["unico-ful/std", "dep:parking"]
sym = []
unwind = ["unico-ful/unwind"]

[dependencies]
# Local crates
unico-context = {path = "../context", default-features = false, features = ["boost"]}
unico-ful = {path = "../ful", default-features = false}
unico-stack = {path = "../stack", default-features = false}
# External crates
bevy_utils_proc_macros = "0"
parking = {version = "2.2", optional = true}
spin = "0.9"
