[package]
edition = "2021"
name = "unico-ful"
version = "0.1.0"

[features]
default = ["std"]
std = []
unwind = ["dep:unwinding"]

[dependencies]
# Local crates
unico-context = {path = "../context", default-features = false, features = ["boost"]}
unico-stack = {path = "../stack", default-features = false}
# External crates
unwinding = {version = "0.2", default-features = false, features = ["panic"], optional = true}
