[package]
edition = "2021"
name = "unico-ful"
version = "0.1.0"

[features]
alloc = ["dep:unwinding"]
default = ["alloc", "global-stack-allocator"]
global-stack-allocator = ["unico-stack/global-allocator"]

[dependencies]
# Local crates
unico-context = {path = "../context", default-features = false, features = ["boost"]}
unico-stack = {path = "../stack", default-features = false}
# External crates
unwinding = {version = "0.2", default-features = false, features = ["panic"], optional = true}
